--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
+    "neat-csv": "^4.0.0",
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
     "request": "^2.88.0",
