--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "forever": "^0.15.3",
     "jsonwebtoken": "^8.4.0",
     "neat-csv": "^4.0.0",
     "pg": "^6.4.2",
@@ -45,7 +46,7 @@
   "scripts": {
     "db:create": "sequelize db:migrate && sequelize db:seed:all",
     "db:reset": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
-    "start": "node server/index.js",
+    "start": "forever start server/index.js",
     "dev": "nodemon server/index.js"
   }
 }
