--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint-staged"
+      "pre-commit": "yarn lint-staged",
+      "pre-push": "yarn test"
     }
   },
   "lint-staged": {
