(tech) setup the port in the configuration

--- a/server/config.js.sample
+++ b/server/config.js.sample
@@ -1,4 +1,5 @@
 module.exports = {
+    port: 810,
     auth: {
         secret: 'secret used for generating authentication tokens',
         expiresIn: '168h', // 7 days
