--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "#server/*": [ "./server/*" ]
+            "#server/*": [ "./server/*" ],
+            "#db/*": [ "./db/*" ]
         }
     },
     "exclude": [
