(tech) cover configController with tests
- mutualize the management of fixtures
- move fixtures to a different test folder for cleaner structure
- add/update models to fit the needs of configController

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
         "baseUrl": ".",
         "paths": {
             "#server/*": [ "./server/*" ],
-            "#db/*": [ "./db/*" ]
+            "#db/*": [ "./db/*" ],
+            "#fixtures/*": [ "./test/fixtures/*" ]
         }
     },
     "exclude": [
