--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
             "alias": {
                 "map": [
                     ["#server", "./server"],
-                    ["#db", "./db"]
+                    ["#db", "./db"],
+                    ["#fixtures", "./test/fixtures"]
                 ],
                 "extensions": [".js"]
             }
