--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "db:reset": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
     "start": "forever start server/index.js",
     "dev": "nodemon server/index.js",
-    "test": "mocha --recursive --require ./test/bootstrap.js --bail",
+    "test": "mocha --recursive --require ./test/bootstrap/index.js --bail",
     "test:unit": "yarn test --invert --grep '.*server/models.*'",
     "test:integration": "yarn test --grep '.*server/models.*'"
   },
