--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "escape-html": "^1.0.3",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-utils": "^1.4.1",
@@ -24,6 +25,7 @@
     "mixin-deep": "^1.3.2",
     "module-alias": "^2.2.0",
     "neat-csv": "^4.0.0",
+    "node-mailjet": "^3.3.1",
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
     "request": "^2.88.0",
@@ -31,7 +33,8 @@
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sequelize-temporal": "^1.0.6",
-    "set-value": "^2.0.1"
+    "set-value": "^2.0.1",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
