--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "cors": "^2.8.5",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-utils": "^1.4.1",
     "express": "^4.16.4",
     "forever": "^0.15.3",
     "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.13",
+    "mixin-deep": "^1.3.2",
     "module-alias": "^2.2.0",
     "neat-csv": "^4.0.0",
     "pg": "^6.4.2",
@@ -26,7 +29,8 @@
     "request-promise": "^4.2.2",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
-    "sequelize-temporal": "^1.0.6"
+    "sequelize-temporal": "^1.0.6",
+    "set-value": "^2.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
