--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-utils": "^1.4.1",
     "express": "^4.16.4",
     "forever": "^0.15.3",
+    "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.13",
     "mixin-deep": "^1.3.2",
