Add a route for exporting shantytowns as excel

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-utils": "^1.4.1",
+    "exceljs": "^2.0.1",
     "express": "^4.16.4",
     "forever": "^0.15.3",
     "js-yaml": "^3.13.1",
