--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "mocha": "^6.0.2",
         "nodemon": "^1.18.9",
         "proxyquire": "^2.1.0",
+        "rewiremock": "^3.13.9",
         "sequelize-test-helpers": "^1.0.10",
         "sinon": "^7.2.7",
         "sinon-chai": "^3.3.0",
