Mise à jour des samples de configuration
Mise à jour pour minimiser le besoin de personnalisation dans le cas d'une installation locale pour dev.

--- a/db/config/config.js.sample
+++ b/db/config/config.js.sample
@@ -1,8 +1,9 @@
 module.exports = {
-    username: 'fabnum',
-    password: 'fabnum',
-    database: 'action_bidonvilles',
+    username: 'postgres',
+    password: 'resorption_bidonvilles',
+    database: 'resorption_bidonvilles',
     host: 'database',
     port: 5432,
     dialect: 'postgres',
+    operatorsAliases: false,
 };
