--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eslint-utils": "^1.4.1",
         "exceljs": "^2.0.1",
         "express": "^4.16.4",
+        "express-validator": "^6.6.1",
         "forever": "^1.0.0",
         "js-yaml": "^3.13.1",
         "jsonwebtoken": "^8.4.0",
