(581) Correction de la backUrl
La backUrl était générée de façon à inclure le port écouté par le serveur dans l'URL. Hors, dans le cadre d'un environnement Dockerisé (comme par exemple la dév.), le port exposé par le container n'est pas nécessairement le même que celui exposé par le host.

Ce commit rajoute simplement un second paramètre de configuration (externalPort) qui sert à préciser le port exposé au public, et qui doit être utilisé dans la backUrl.
Le paramètre initial (port) sert uniquement à indiquer le port écouté par Express.

--- a/server/config.js.sample
+++ b/server/config.js.sample
@@ -4,6 +4,7 @@ const config = {
     assetsSrc: path.resolve(__dirname, '../assets'),
     frontUrl: 'http://localhost:1234',
     port: 8080,
+    externalPort: 1236,
     auth: {
         secret: 'secret used for generating authentication tokens',
         expiresIn: '168h', // 7 days
@@ -15,6 +16,6 @@ const config = {
         privateKey: 'MAILJET_API_PRIVATE_KEY',
     },
 };
-config.backUrl = `http://localhost:${config.port}`;
+config.backUrl = `http://localhost:${config.externalPort}`;
 
 module.exports = config;
