--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "private": true,
     "dependencies": {
         "@slack/webhook": "^5.0.3",
+        "agenda": "^3.1.0",
         "body-parser": "^1.18.3",
         "cors": "^2.8.5",
         "escape-html": "^1.0.3",
