Alerte slack à la création ou fermeture d'un site

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "AGPL-3.0-or-later",
     "private": true,
     "dependencies": {
+        "@slack/webhook": "^5.0.3",
         "body-parser": "^1.18.3",
         "cors": "^2.8.5",
         "escape-html": "^1.0.3",
