--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
         "db:reset": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
         "start": "forever start server/index.js",
         "dev": "nodemon server/index.js",
-        "test": "mocha --recursive --require ./test/bootstrap.js --bail",
+        "test": "docker-compose exec -T api yarn mocha --recursive --require ./test/bootstrap.js --bail",
         "test:unit": "yarn test --invert --grep '.*server/models.*'",
         "test:integration": "yarn test --grep '.*server/models.*'"
     },
