--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,9 +34,23 @@ services:
         restart: always
         volumes:
             - ./agenda-data:/data/db
+        ports:
+            - '27017-27019:27017-27019'
         environment:
-            MONGO_INITDB_ROOT_USERNAME: root
-            MONGO_INITDB_ROOT_PASSWORD: demo
+            MONGO_INITDB_ROOT_USERNAME: rbadmin
+            MONGO_INITDB_ROOT_PASSWORD: rbadmin
+
+    rb_agendash:
+        depends_on:
+          - agenda_db
+        image: agenda/agendash
+        container_name: rb_agendash
+        environment:
+            - COLLECTION=agendaJobs
+            - MONGODB_URI=mongodb://rbadmin:rbadmin@agenda_db
+        ports:
+          - '3000:3000'
+        restart: always
 
 volumes:
     api_node_modules:
