Add Sentry package

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "license": "AGPL-3.0-or-later",
     "private": true,
     "dependencies": {
+        "@sentry/node": "^6.2.2",
+        "@sentry/tracing": "^6.2.2",
         "@slack/webhook": "^5.0.3",
         "agenda": "^3.1.0",
         "body-parser": "^1.18.3",
