--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,10 @@
                     [
                         "#fixtures",
                         "./test/fixtures"
+                    ],
+                    [
+                        "#test",
+                        "./test"
                     ]
                 ],
                 "extensions": [
