--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.2.1",
     "chai-subset": "^1.6.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "husky": "^1.2.0",
